Fix/UI modal overflow

--- a/src/components/adult/table/SubmissionModal.module.css
+++ b/src/components/adult/table/SubmissionModal.module.css
@@ -33,6 +33,11 @@
     gap: 0.2rem;
     padding: 0.5rem;
   }
+  .lettersContainer {
+    max-width: 20rem;
+    gap: 0.5rem;
+
+  }
 }
     
   
